--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@uiw/react-color-wheel": "^2.3.0",
     "axios": "^1.7.2",
     "bootstrap": "^5.3.3",
+    "js-cookie": "^3.0.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-scripts": "5.0.1",
